--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <base href="http://localhost:63342/Web_Page/" target="_blank">
+<!--    <base href="http://localhost:63342/Web_Page/" target="_blank">-->
 
 <!--    To change the colors of a link-->
 <!--    <style>-->
