Continued adding CSS code compilation.

--- a/Page2.html
+++ b/Page2.html
@@ -4,7 +4,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Ruddh Web Page</title>
+    <title>Page2 Web Page</title>
     <link rel="icon" type="image/x-icon" href="favicon.ico">
 
 <!--    To style table borders-->
