--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Ruddh Web Page</title>
+    <title>HTML Web Page</title>
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -252,6 +252,18 @@
           background-color: lightgray;
         }
     </style>
+
+<!--    <style>-->
+<!--        ol {-->
+<!--          counter-reset: section;-->
+<!--          list-style-type: none;-->
+<!--        }-->
+
+<!--        li::before {-->
+<!--          counter-increment: section;-->
+<!--          content: counters(section,".") " ";-->
+<!--        }-->
+<!--    </style>-->
 
     <!--To attach style attributes from other file-->
     <!--    <link rel="stylesheet" href="styles.css">-->
