--- a/Page3.html
+++ b/Page3.html
@@ -1,29 +1,86 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <title>vNavig Web Page</title>
+
+    <style>
+        body {
+          margin: 0;
+        }
+
+        ul {
+          list-style-type: none;
+          margin: 0;
+          padding: 0;
+          width: 25%;
+          background-color: #f1f1f1;
+          position: fixed;
+          height: 100%;
+          overflow: auto;
+        }
+
+        li a {
+          display: block;
+          color: #000;
+          padding: 8px 16px;
+          text-decoration: none;
+        }
+
+        li a.active {
+          background-color: #04AA6D;
+          color: white;
+        }
+
+        li a:hover:not(.active) {
+          background-color: #555;
+          color: white;
+        }
+    </style>
+
     <style>
         .all-browsers {
-          margin: 0;
+          margin: 25%;
           padding: 5px;
           background-color: lightgray;
         }
-
         .all-browsers > h1, .browser {
           margin: 10px;
           padding: 5px;
         }
-
         .browser {
           background: white;
         }
-
         .browser > h2, p {
           margin: 4px;
           font-size: 90%;
         }
     </style>
+
 </head>
 <body>
+
+<ul class="vNavig">
+    <li class="vNavig"><a class="active" href="#home">Home</a></li>
+    <li class="vNavig"><a href="#news">News</a></li>
+    <li class="vNavig"><a href="#contact">Contact</a></li>
+    <li class="vNavig"><a href="#about">About</a></li>
+</ul>
+
+<div style="margin-left:25%;padding:1px 16px;height:1000px;">
+    <h2>Fixed Full-height Side Nav</h2>
+    <h3>Try to scroll this area, and see how the sidenav sticks to the page</h3>
+    <p>Notice that this div element has a left margin of 25%. This is because the side navigation is set to 25% width. If you remove the margin, the sidenav will overlay/sit on top of this div.</p>
+    <p>Also notice that we have set overflow:auto to sidenav. This will add a scrollbar when the sidenav is too long (for example if it has over 50 links inside of it).</p>
+    <p>Some text..</p>
+    <p>Some text..</p>
+    <p>Some text..</p>
+    <p>Some text..</p>
+    <p>Some text..</p>
+    <p>Some text..</p>
+    <p>Some text..</p>
+</div>
+<br>
+<hr>
 
 <article class="all-browsers">
     <h1>Most Popular Browsers</h1>
@@ -40,6 +97,7 @@
         <p>Microsoft Edge is a web browser developed by Microsoft, released in 2015. Microsoft Edge replaced Internet Explorer.</p>
     </article>
 </article>
+
 
 </body>
 </html>
